k8s/04-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthnova-backend
  namespace: healthnova
  labels:
    app: healthnova-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: healthnova-backend
  template:
    metadata:
      labels:
        app: healthnova-backend
    spec:
      containers:
        - name: backend
          image: ihasseeb/healthnova-backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "256Mi"
              cpu: "150m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 20
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: healthnova-backend-svc
  namespace: healthnova
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  selector:
    app: healthnova-backend
