k8s/05-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthnova-frontend
  namespace: healthnova
  labels:
    app: healthnova-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: healthnova-frontend
  template:
    metadata:
      labels:
        app: healthnova-frontend
    spec:
      containers:
        - name: frontend
          image: ihasseeb/healthnova-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4173
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: healthnova-frontend-svc
  namespace: healthnova
spec:
  type: ClusterIP
  ports:
    - port: 4173
      targetPort: 4173
      protocol: TCP
  selector:
    app: healthnova-frontend
